fix editor overflow in medias

--- a/_modules.scss
+++ b/_modules.scss
@@ -479,6 +479,7 @@ body article.editor-media{
     editor[inline]{
         > div{
             height: 100%;
+            overflow: hidden;
         }
         > popover{
             display: none
